// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reservation service schemas > ErrorSchema matches snapshot 1`] = `
{
  "$id": "Error",
  "properties": {
    "error": {
      "type": "string",
    },
    "message": {
      "type": "string",
    },
    "statusCode": {
      "type": "number",
    },
  },
  "required": [
    "error",
    "message",
    "statusCode",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > FloorPlanLayoutSchema matches snapshot 1`] = `
{
  "$id": "FloorPlanLayout",
  "properties": {
    "backgroundImage": {
      "type": "string",
    },
    "gridSize": {
      "type": "number",
    },
    "height": {
      "type": "number",
    },
    "showGrid": {
      "type": "boolean",
    },
    "width": {
      "type": "number",
    },
  },
  "required": [
    "width",
    "height",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > FloorPlanSchema matches snapshot 1`] = `
{
  "$id": "FloorPlan",
  "properties": {
    "createdAt": {
      "type": "string",
    },
    "id": {
      "type": "string",
    },
    "isActive": {
      "type": "boolean",
    },
    "layoutJson": {
      "properties": {
        "backgroundImage": {
          "type": "string",
        },
        "gridSize": {
          "type": "number",
        },
        "height": {
          "type": "number",
        },
        "showGrid": {
          "type": "boolean",
        },
        "width": {
          "type": "number",
        },
      },
      "required": [
        "width",
        "height",
      ],
      "type": "object",
    },
    "name": {
      "type": "string",
    },
    "updatedAt": {
      "type": "string",
    },
    "venueId": {
      "type": "string",
    },
  },
  "required": [
    "id",
    "venueId",
    "name",
    "isActive",
    "layoutJson",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > GuestSchema matches snapshot 1`] = `
{
  "$id": "Guest",
  "properties": {
    "createdAt": {
      "type": "string",
    },
    "email": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "id": {
      "type": "string",
    },
    "lastVisit": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "lifetimeSpend": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "name": {
      "type": "string",
    },
    "notes": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "phone": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "tags": {
      "anyOf": [
        {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        {
          "type": "null",
        },
      ],
    },
    "updatedAt": {
      "type": "string",
    },
    "venueId": {
      "type": "string",
    },
    "visitCount": {
      "type": "number",
    },
  },
  "required": [
    "id",
    "venueId",
    "email",
    "phone",
    "name",
    "notes",
    "visitCount",
    "lifetimeSpend",
    "lastVisit",
    "tags",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > GuestSegmentSchema matches snapshot 1`] = `
{
  "$id": "GuestSegment",
  "properties": {
    "count": {
      "type": "number",
    },
    "description": {
      "type": "string",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "name",
    "description",
    "count",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > PaginationSchema matches snapshot 1`] = `
{
  "$id": "Pagination",
  "properties": {
    "hasNext": {
      "type": "boolean",
    },
    "hasPrev": {
      "type": "boolean",
    },
    "limit": {
      "type": "number",
    },
    "page": {
      "type": "number",
    },
    "total": {
      "type": "number",
    },
    "totalPages": {
      "type": "number",
    },
  },
  "required": [
    "page",
    "limit",
    "total",
    "totalPages",
    "hasNext",
    "hasPrev",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > ReservationSchema matches snapshot 1`] = `
{
  "$id": "Reservation",
  "properties": {
    "cancellationNote": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "cancellationReason": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "createdAt": {
      "type": "string",
    },
    "date": {
      "type": "string",
    },
    "endTime": {
      "type": "string",
    },
    "guestEmail": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "guestId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "guestName": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "guestPhone": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "id": {
      "type": "string",
    },
    "notes": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "partySize": {
      "type": "number",
    },
    "startTime": {
      "type": "string",
    },
    "status": {
      "enum": [
        "PENDING",
        "CONFIRMED",
        "CANCELLED",
        "COMPLETED",
        "NO_SHOW",
      ],
      "type": "string",
    },
    "table": {
      "properties": {
        "capacity": {
          "type": "number",
        },
        "createdAt": {
          "type": "string",
        },
        "floorPlanId": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
        },
        "id": {
          "type": "string",
        },
        "isActive": {
          "type": "boolean",
        },
        "location": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
        },
        "maxCovers": {
          "anyOf": [
            {
              "type": "number",
            },
            {
              "type": "null",
            },
          ],
        },
        "minCovers": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
        "priority": {
          "type": "number",
        },
        "shapeMetadata": {
          "anyOf": [
            {
              "properties": {
                "color": {
                  "type": "string",
                },
                "height": {
                  "type": "number",
                },
                "rotation": {
                  "type": "number",
                },
                "shape": {
                  "enum": [
                    "rectangle",
                    "circle",
                    "square",
                  ],
                  "type": "string",
                },
                "width": {
                  "type": "number",
                },
                "x": {
                  "type": "number",
                },
                "y": {
                  "type": "number",
                },
              },
              "required": [
                "x",
                "y",
                "width",
                "height",
                "shape",
              ],
              "type": "object",
            },
            {
              "type": "null",
            },
          ],
        },
        "status": {
          "enum": [
            "AVAILABLE",
            "OCCUPIED",
            "DIRTY",
            "READY",
          ],
          "type": "string",
        },
        "tableNumber": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
        },
        "updatedAt": {
          "type": "string",
        },
        "venueId": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "type": "null",
            },
          ],
        },
      },
      "required": [
        "id",
        "name",
        "tableNumber",
        "capacity",
        "minCovers",
        "maxCovers",
        "location",
        "isActive",
        "priority",
        "status",
        "venueId",
        "floorPlanId",
        "shapeMetadata",
        "createdAt",
        "updatedAt",
      ],
      "type": "object",
    },
    "tableId": {
      "type": "string",
    },
    "updatedAt": {
      "type": "string",
    },
    "userId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "venueId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
  },
  "required": [
    "id",
    "date",
    "startTime",
    "endTime",
    "partySize",
    "status",
    "notes",
    "cancellationReason",
    "cancellationNote",
    "guestName",
    "guestEmail",
    "guestPhone",
    "guestId",
    "userId",
    "tableId",
    "venueId",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > TableSchema matches snapshot 1`] = `
{
  "$id": "Table",
  "properties": {
    "capacity": {
      "type": "number",
    },
    "createdAt": {
      "type": "string",
    },
    "floorPlanId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "id": {
      "type": "string",
    },
    "isActive": {
      "type": "boolean",
    },
    "location": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "maxCovers": {
      "anyOf": [
        {
          "type": "number",
        },
        {
          "type": "null",
        },
      ],
    },
    "minCovers": {
      "type": "number",
    },
    "name": {
      "type": "string",
    },
    "priority": {
      "type": "number",
    },
    "shapeMetadata": {
      "anyOf": [
        {
          "properties": {
            "color": {
              "type": "string",
            },
            "height": {
              "type": "number",
            },
            "rotation": {
              "type": "number",
            },
            "shape": {
              "enum": [
                "rectangle",
                "circle",
                "square",
              ],
              "type": "string",
            },
            "width": {
              "type": "number",
            },
            "x": {
              "type": "number",
            },
            "y": {
              "type": "number",
            },
          },
          "required": [
            "x",
            "y",
            "width",
            "height",
            "shape",
          ],
          "type": "object",
        },
        {
          "type": "null",
        },
      ],
    },
    "status": {
      "enum": [
        "AVAILABLE",
        "OCCUPIED",
        "DIRTY",
        "READY",
      ],
      "type": "string",
    },
    "tableNumber": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
    "updatedAt": {
      "type": "string",
    },
    "venueId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
  },
  "required": [
    "id",
    "name",
    "tableNumber",
    "capacity",
    "minCovers",
    "maxCovers",
    "location",
    "isActive",
    "priority",
    "status",
    "venueId",
    "floorPlanId",
    "shapeMetadata",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > TableShapeMetadataSchema matches snapshot 1`] = `
{
  "$id": "TableShapeMetadata",
  "properties": {
    "color": {
      "type": "string",
    },
    "height": {
      "type": "number",
    },
    "rotation": {
      "type": "number",
    },
    "shape": {
      "enum": [
        "rectangle",
        "circle",
        "square",
      ],
      "type": "string",
    },
    "width": {
      "type": "number",
    },
    "x": {
      "type": "number",
    },
    "y": {
      "type": "number",
    },
  },
  "required": [
    "x",
    "y",
    "width",
    "height",
    "shape",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > VenueGroupSchema matches snapshot 1`] = `
{
  "$id": "VenueGroup",
  "properties": {
    "createdAt": {
      "type": "string",
    },
    "id": {
      "type": "string",
    },
    "name": {
      "type": "string",
    },
    "settings": {
      "anyOf": [
        {
          "propertyNames": {
            "type": "string",
          },
          "type": "object",
        },
        {
          "type": "null",
        },
      ],
    },
    "slug": {
      "type": "string",
    },
  },
  "required": [
    "id",
    "name",
    "slug",
    "settings",
    "createdAt",
  ],
  "type": "object",
}
`;

exports[`Reservation service schemas > VenueSchema matches snapshot 1`] = `
{
  "$id": "Venue",
  "properties": {
    "createdAt": {
      "type": "string",
    },
    "currencyCode": {
      "type": "string",
    },
    "ianaTimezone": {
      "type": "string",
    },
    "id": {
      "type": "string",
    },
    "name": {
      "type": "string",
    },
    "operatingHours": {
      "anyOf": [
        {
          "properties": {
            "friday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "monday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "saturday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "sunday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "thursday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "tuesday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
            "wednesday": {
              "properties": {
                "close": {
                  "type": "string",
                },
                "closed": {
                  "type": "boolean",
                },
                "open": {
                  "type": "string",
                },
              },
              "required": [
                "open",
                "close",
              ],
              "type": "object",
            },
          },
          "type": "object",
        },
        {
          "type": "null",
        },
      ],
    },
    "settings": {
      "anyOf": [
        {
          "propertyNames": {
            "type": "string",
          },
          "type": "object",
        },
        {
          "type": "null",
        },
      ],
    },
    "slug": {
      "type": "string",
    },
    "updatedAt": {
      "type": "string",
    },
    "venueGroup": {
      "properties": {
        "createdAt": {
          "type": "string",
        },
        "id": {
          "type": "string",
        },
        "name": {
          "type": "string",
        },
        "settings": {
          "anyOf": [
            {
              "propertyNames": {
                "type": "string",
              },
              "type": "object",
            },
            {
              "type": "null",
            },
          ],
        },
        "slug": {
          "type": "string",
        },
      },
      "required": [
        "id",
        "name",
        "slug",
        "settings",
        "createdAt",
      ],
      "type": "object",
    },
    "venueGroupId": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
    },
  },
  "required": [
    "id",
    "venueGroupId",
    "name",
    "slug",
    "ianaTimezone",
    "currencyCode",
    "operatingHours",
    "settings",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;
